# SideversProtocol

./: .gitignore  CRYPTO.md  Cargo.toml  LICENSE-CODE  README.md  REVIEWER_BRIEFING.md  SECURITY_CHANGELOG.md  TELEMETRY.md
.githooks/: pre-push
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/sidevers-cli/: Cargo.toml
crates/sidevers-cli/src/: cli.rs  main.rs
crates/sidevers-conformance/: Cargo.toml
crates/sidevers-conformance/src/: fixtures.rs  harness.rs  lib.rs
crates/sidevers-core/: Cargo.toml
crates/sidevers-core/benches/: crypto.rs  envelope.rs
crates/sidevers-core/src/: address.rs  cbor.rs  envelope.rs  error.rs  features.rs  keys.rs  keystore.rs  lib.rs  linkage.rs  log_id.rs  payload.rs  replay.rs  sas.rs  verse.rs
crates/sidevers-core/src/messages/: device.rs  direct.rs  forward.rs  handshake.rs  mod.rs  peer.rs  profile.rs  public.rs  rendezvous.rs  retirement.rs  storage_prefs.rs  verse.rs
crates/sidevers-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/sidevers-ffi/include/: sidevers.h
crates/sidevers-ffi/src/: address.rs  contact.rs  dm.rs  error.rs  keys.rs  lib.rs  linkage.rs  mem.rs  public.rs
crates/sidevers-ffi/tests/: roundtrip.rs
crates/sidevers-net/: Cargo.toml
crates/sidevers-net/src/: cert.rs  connection_pool.rs  error.rs  forward.rs  framing.rs  fs_perms.rs  gossip.rs  gossip_policy.rs  handshake.rs  handshake_limit.rs  hole_punch.rs  hygiene.rs  inbox_store.rs  lib.rs  metrics.rs  node.rs  peers.rs  provenance.rs  relationships.rs  replay_journal.rs  reputation.rs  session.rs  side.rs  side_store.rs  storage_protocol.rs  telemetry.rs  transport.rs  verse.rs  verse_post_store.rs
crates/sidevers-node/: Cargo.toml
crates/sidevers-node/src/: main.rs
crates/sidevers-storage/: Cargo.toml
crates/sidevers-storage/benches/: storage.rs
crates/sidevers-storage/src/: chunking.rs  db.rs  error.rs  lib.rs  object.rs  reference.rs
desktop/: build-desktop.sh
desktop/tauri/: .gitignore  Cargo.toml  build-tailwind.sh  build.rs  tauri.conf.json
desktop/tauri/capabilities/: default.json
desktop/tauri/macos/: entitlements.plist
desktop/tauri/src/: main.rs
desktop/tauri/tools/: README.md
docs/: RELEASING.md
docs/reviewer-outreach/: README.md  candidate-shortlist.md  cover-email-template.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: announcement_decode.rs  cbor_decode.rs  contract_deliver_decode.rs  contract_fetch_decode.rs  contract_object_decode.rs  device_revoke_decode.rs  direct_message_decode.rs  directory_entry_decode.rs  envelope_decode.rs  handle_attest_decode.rs  handle_resolve_decode.rs  join_accept_decode.rs  join_decline_decode.rs  join_request_decode.rs  linkage_decode.rs  page_deliver_decode.rs  page_fetch_decode.rs  page_publish_decode.rs  pairing_qr_parse.rs  pairing_request_decode.rs  peer_ask_decode.rs  peer_tell_decode.rs  profile_decode.rs  rendezvous_ack_decode.rs  rendezvous_decode.rs  retirement_decode.rs  state_bundle_decode.rs  state_delta_decode.rs  storage_prefs_decode.rs  verse_amend_decode.rs  verse_leave_decode.rs  verse_post_decode.rs  verse_reconsent_decode.rs  verse_remove_decode.rs
mobile/: build-android.sh  build-ios.sh
mobile/android/kotlin/src/main/kotlin/com/sidevers/: SideversCore.kt
mobile/android/sidevers-jni/: Cargo.toml
mobile/android/sidevers-jni/src/: lib.rs
mobile/swift/: Package.swift
mobile/swift/Sources/Sidevers/: Sidevers.swift
mobile/swift/Sources/SideversFFI/include/: module.modulemap  sidevers-placeholder.h
mobile/swift/Tests/SideversTests/: SideversTests.swift
scripts/: audit-bundle.sh  build-linux-gui.sh  preflight.sh
sidevers-brand-assets/: BRAND.md
sidevers-brand-assets/brand-docs/: colors.css  colors.json  typography.md
sidevers-brand-assets/favicon/: site.webmanifest
