[workspace]
resolver = "3"
members = [
    "crates/sidevers-core",
    "crates/sidevers-storage",
    "crates/sidevers-net",
    "crates/sidevers-node",
    "crates/sidevers-cli",
    "crates/sidevers-conformance",
    "crates/sidevers-ffi",
]
# The fuzz harness is managed by cargo-fuzz as a standalone sub-crate;
# excluding it keeps stable-toolchain workspace builds from trying to
# resolve `libfuzzer-sys` (which needs nightly + LLVM).
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "PolyForm-Noncommercial-1.0.0"
publish = false

# Each library crate forbids `unsafe_code` via a crate-level attribute.
# The FFI crate (sidevers-ffi) explicitly needs `unsafe` for the C ABI
# (raw pointers, foreign-owned memory), so it doesn't forbid.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.dependencies]
# Internal crates
sidevers-core = { path = "crates/sidevers-core" }
sidevers-storage = { path = "crates/sidevers-storage" }
sidevers-net = { path = "crates/sidevers-net" }

# Crypto / encoding (protocol spec §§2.2, 3.1, 3.3, 3.4)
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core", "zeroize"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["zeroize", "static_secrets"] }
blake3 = { version = "1.5", default-features = false, features = ["std"] }
hkdf = { version = "0.12", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std", "alloc"] }
bech32 = { version = "0.11", default-features = false, features = ["std"] }
ciborium = { version = "0.2", default-features = false }
ciborium-io = { version = "0.2", default-features = false }
zeroize = { version = "1.7", features = ["derive"] }
getrandom = "0.2"
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
subtle = { version = "2.5", default-features = false }

# Errors / utilities
thiserror = "1.0"
anyhow = "1.0"
hex = { version = "0.4", default-features = false, features = ["std"] }
bytes = "1.6"

# CLI / runtime
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"

# Network — QUIC + TLS (spec §4.2)
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

# Storage backing
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"

# Testing
proptest = "1.4"
tempfile = "3"

# FFI / header generation
cbindgen = "0.29"
