[package]
name = "sidevers-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Sidevers CLI: keys, addresses, envelopes, linkage, and network ops."

[lints]
workspace = true

[[bin]]
name = "sidevers"
path = "src/main.rs"

[dependencies]
sidevers-core = { workspace = true }
sidevers-storage = { workspace = true }
sidevers-net = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
# Self-update via GitHub Releases. Pulled in only for the `sidevers
# self-update` subcommand; default features cover gzip + zip extraction
# and rustls (no openssl in the build).
self_update = { version = "0.41", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
] }
