[package]
name = "sidevers-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Sidevers protocol core: identity, envelope, deterministic CBOR, cryptography (no I/O)."

[lints]
workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
bech32 = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "envelope"
harness = false
