[package]
name = "sidevers-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Sidevers reference node daemon (listener)."

[lints]
workspace = true

[[bin]]
name = "sidevers-node"
path = "src/main.rs"

[dependencies]
sidevers-core = { workspace = true }
sidevers-storage = { workspace = true }
sidevers-net = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
hex = { workspace = true }
