[package]
name = "sidevers-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Sidevers content-addressed object storage (BLAKE3-addressed, SQLite + blob FS)."

[lints]
workspace = true

[dependencies]
sidevers-core = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
