# Sidevers desktop reference client — a Tauri 2 application that wraps a
# small slice of `sidevers-core` (keygen, address encoding, DM seal/open)
# behind a vanilla HTML/JS frontend served from ./dist.
#
# NOT a workspace member — Tauri pulls in a large dep graph and we don't
# want it on every `cargo test --workspace`. Build it independently via
# `desktop/build-desktop.sh` (or `cargo tauri dev` from this directory).

[package]
name = "sidevers-desktop"
version = "0.1.2"
edition = "2024"
publish = false

[[bin]]
name = "sidevers-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Updater plugin — checks GitHub Releases for newer signed builds and
# applies them in place. Requires `plugins.updater` config in
# tauri.conf.json and a signing keypair (see docs/RELEASING.md).
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
directories = "5.0"
unicode-normalization = "0.1"
sidevers-core = { path = "../../crates/sidevers-core" }
sidevers-net = { path = "../../crates/sidevers-net" }
sidevers-storage = { path = "../../crates/sidevers-storage" }

[dev-dependencies]
tempfile = "3"

[workspace]
# Standalone — not part of the main workspace.
